syntax = "proto3";
option go_package="./pb";

package eventstore;

service EventStore {
    rpc Create(CreateEventRequest) returns (CreateEventResponse) {}
    rpc Get(GetEventsRequest) returns (GetEventsResponse) {}
    rpc GetStream(GetEventsRequest) returns (stream Event) {}
} 

message Event {
    string event_id = 1;
    string event_type = 2;
    string aggregate_id = 3;
    string aggregate_type = 4;
    string event_data = 5;
    string channel_name = 6; // an optional field
}

message CreateEventRequest {
    Event event = 1;
}

message CreateEventResponse {
    bool is_success = 1;
    string error = 2;
}

message GetEventsRequest {
    string event_id = 1;
    string aggregate_id = 2;
}

message GetEventsResponse {
    repeated Event events = 1;
}